# swpt_accounts

./: .dir-locals.el  .flake8  .gitmodules  Dockerfile  README.md  README.rst  development.env  docker-compose-all.yml  docker-compose-tests.yml  docker-compose.yml  env.development  env.production  protocol-json.rst  protocol.rst  pyproject.toml  pytest.ini  release_to_dockerhub.sh  root-config-data.rst  tasks.py  wsgi.py
.github/workflows/: release_image.yml  run_tests.yml
docker/: entrypoint.sh  supervisord.conf
docker/nodedata/: server.key
docker/nodedata/certs/: 4A4CAC5FD596554138C85D307CBC0BE0.pem  4A4CAC5FD596554138C85D307CBC0BE3.pem
docker/nodedata/db/: index  index.old  root-ca.csr  serial  serial.old
docker/nodedata/private/: root-ca.key
docker/pg/: create-users.sql
migrations/: env.py
migrations/versions/: 00d1fcff171d_.py  00db5eb5b8ce_.py  02002f85eb64_.py  02a8691d6139_.py  03c279293310_.py  051fb2ac62bd_.py  06eedd9b7bd6_.py  071b69b37442_.py  089a4aa820f9_.py  0b397723a7eb_.py  0c2cacaa5678_.py  0c901606ca92_.py  0dd89575ef7f_.py  0f2786ad566d_.py  0fc0798ffe39_.py  1190fdab999c_.py  11a7fafa1b1a_.py  11da26469553_.py  11dd6438dd0f_.py  1259e3349742_.py  146814e225dd_.py  15cee4ecef27_.py  17c61eba8010_.py  1c4160574800_.py  1c9efb5e6329_.py  1d4014e82e4f_.py  1e84a69d5e80_.py  22e53dea1754_.py  231300d53e7e_.py  23f819d48082_.py  25781023a980_.py  262fe95b716f_.py  28cc8320ad2f_.py  2b2a0ccaabb2_.py  2b401690cc33_.py  2bc308f279a5_.py  2cb1d9a090f2_.py  2f831c2ff5cf_.py  317ebe433d55_.py  31d12a1c4a47_.py  (+197 more)
swpt_accounts/: __init__.py  actors.py  chores.py  cli.py  events.py  extensions.py  fetch_api_client.py  logging.conf  models.py  multiproc_utils.py  procedures.py  routes.py  schemas.py  table_scanners.py
tests/: conftest.py  test_actors.py  test_chores.py  test_cli.py  test_cli_unsafe.py  test_fetch_api_client.py  test_mass_queries.py  test_models.py  test_pgplsql_procedures.py  test_procedures.py  test_routes.py  test_swpt_accounts.py  test_unsafe.py
