[tool.poetry]
name = "swpt_accounts"
version = "0.1.0"
description = "Swaptacural micro-service that manages user account balances"
authors = ["Evgeni Pandurski <epandurski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
pudb = "*"
web-pdb = "*"
python-json-logger = "^0.1.11"
flask-env = "^2.0"
flask-migrate = "^2.4"
flask_signalbus = "^0.4.0"
flask_melodramatiq = "^0.3.4"
psycopg2-binary = "^2.8"
dramatiq = {git = "https://github.com/epandurski/dramatiq.git", extras = ["rabbitmq", "watch"], branch = "set-queue-name-if-missing"}

[tool.poetry.dev-dependencies]
python-dotenv = ">=0.10.1"
pytest = "^4.0"
pytest-pudb = "^0.7.0"
pytest-mock = "^1.10"
pytest-dotenv = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
