[tool.poetry]
name = "swpt_accounts"
version = "0.1.0"
description = "Swaptacural micro-service that manages user account balances"
authors = ["Evgeni Pandurski <epandurski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
gunicorn = "*"
python-json-logger = "^0.1.11"
flask-migrate = "^2.4"
flask_signalbus = "^0.5.17"
flask_melodramatiq = "^0.3.4"
psycopg2-binary = "^2.8"
pika = "^1.3"
dramatiq = {git = "https://github.com/epandurski/dramatiq.git", extras = ["rabbitmq"], branch = "set-queue-name-if-missing"}
pytest = "^4.0"
pytest-mock = "^1.10"
marshmallow = "^3.0.1"
swpt_lib = {git = "https://github.com/epandurski/swpt_lib.git"}
requests = "^2.25.1"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pudb = "*"
web-pdb = "*"
python-dotenv = ">=0.10.1"
flake8 = "^3.7"
pytest-pudb = "^0.7.0"
pytest-dotenv = "^0.4.0"
pytest-cov = "^2.7"
mypy = "^0.961"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
