[tool.poetry]
name = "swpt_accounts"
version = "0.1.0"
description = "Swaptacural micro-service that manages user account balances"
authors = ["Evgeni Pandurski <epandurski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "*"
python-json-logger = "^2.0.4"
flask = "^3.0.2"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"
psycopg = {extras = ["binary"], version = "^3.1.10"}
pika = "^1.3"
sqlalchemy = "^2.0.19"
alembic = "^1.8.1"
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
marshmallow = "^3.17.0"
swpt_pythonlib = {git = "https://github.com/swaptacular/swpt_pythonlib.git", tag = "v0.9.6"}
requests = "^2.31.0"
aiohttp = "^3.9.3"

[tool.poetry.group.dev.dependencies]
pudb = "*"
web-pdb = "*"
python-dotenv = "^1.0.0"
pytest-pudb = "^0.7.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.1.0"
mypy = "^0.961"
python-lsp-server = {extras = ["all"], version = "^1.7.2"}
black = "^23.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
